fix text overflow issue with dropdown

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -31,7 +31,7 @@ a.btn, .button-trello {
 .drops {
   text-align: center !important;
   margin: 0 auto !important;
-  width: 200px !important;
+  width: 300px !important;
 }
 
 button.btn-lg {
@@ -49,13 +49,14 @@ button.btn-lg1 {
   color: #6CA299 !important;
   border-radius: 0px !important;
   margin-top: 10px;
-  width: 200px;
+  width: 300px;
 }
 
 .cardMenu {
   text-align: center !important;
-  width: 200px;
+  width: 300px !important;
   margin: 0 auto !important;
+  white-space: normal !important;
 }
 
 .reportCard {
